css/queries.css
/*************/
/* Desktop */
/*************/

@media screen and (max-width: 1286px) {
  .housing {
    grid-template-columns: 1.95fr 1.05fr;
  }

  .lodging {
    grid-template-columns: repeat(2, 1fr);
  }
}

/*************/
/* Tablet */
/*************/

@media screen and (max-width: 992px) {
  .housing {
    grid-template-columns: 1fr;
    row-gap: 32px;
  }

  .lodging {
    grid-template-columns: repeat(2, 3fr);
    grid-row: 2/3;
  }

  .activity--container {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr 1fr;
  }

  .large--1 {
    grid-row: initial;
  }

  .large--2 {
    grid-row: initial;
  }

  .medium--1 {
    grid-row: initial;
  }

  .medium--2 {
    grid-row: initial;
  }

  .small--1 {
    grid-column: 1/2;
    grid-row: 2/3;
  }

  .small--2 {
    grid-column: 2/3;
    grid-row: initial;
  }
}

@media (max-width: 821px) {
  .footer__container {
    flex-direction: column;
    gap: 32px;
  }

  .footer__item {
    width: 100%;
  }
}

/*************/
/* mobile */
/*************/

@media screen and (max-width: 768px) {
  .nav {
    display: flex;
    flex-direction: column;
  }

  .nav__img {
    margin: 24px 0 0 0;
  }

  .sub--nav {
    display: flex;

    width: 100%;

    text-align: center;
  }

  .nav__link {
    flex-grow: 1;
  }

  .nav__link:hover {
    border-top-color: transparent;
    border-bottom-color: #0065fc;
  }

  .nav__link--active {
    border-top: transparent;
    border-bottom: 3px solid #0065fc;

    color: #0065fc;
  }

  .search__text {
    display: none;
  }

  .icon__search {
    display: block;
  }

  .lodging {
    column-gap: 10px;
    row-gap: 10px;

    padding: 12px;

    background-color: transparent;
  }

  .popular {
    padding: 12px;

    border-radius: 0;
  }

  .popular__card--container {
    gap: 10px;
  }

  .activity--container {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 209px);
    height: fit-content;
  }

  .large--2 {
    grid-column: 1/2;
    grid-row: 3/4;
  }
}

@media screen and (max-width: 661px) {
  .lodging {
    grid-template-columns: 1fr;
  }

  .activity--container {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(6, 209px);

    height: fit-content;

    padding: 10px;
  }

  .large--1 {
    grid-column: 1/2;
    grid-row: initial;
  }

  .large--2 {
    grid-column: 1/2;
    grid-row: initial;
  }

  .medium--1 {
    grid-column: 1/2;
    grid-row: initial;
  }

  .medium--2 {
    grid-column: 1/2;
    grid-row: initial;
  }

  .small--1 {
    grid-column: 1/2;
    grid-row: initial;
  }

  .small--2 {
    grid-column: 1/2;
    grid-row: 3/4;
  }
}

@media screen and (max-width: 433px) {
  .header,
  .main {
    padding: 0 5px;
  }

  .input {
    max-width: 200px;
    padding: 18px;
  }
}

